@@ -1,5 +1,0 @@
-
-These files are related with *BSD port. I don't know if it's still buildable
-on this OS. Hope that someone will check it...
-
-Maciek
